Initial setup for userscript

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,10 @@
 node_modules/**
 LICENSE
 .plasmo/**
-build/**
+build/chrome-mv3-dev/**
+build/chrome-mv3-prod/**
+build/firefox-mv2-prod/**
+build/userscript-dev/**
 pnpm-lock.yaml
 tsconfig.json
+tsconfig.tsbuildinfo
