--- a/package.json
+++ b/package.json
@@ -67,11 +67,14 @@
       "@typescript-eslint/no-unsafe-return": 0,
       "@typescript-eslint/no-useless-empty-export": 0,
       "@typescript-eslint/naming-convention": 0,
+      "@typescript-eslint/prefer-optional-chain": 0,
+      "@typescript-eslint/restrict-plus-operands": 0,
       "n/prefer-global/process": 0,
       "unicorn/no-empty-file": 0,
       "camelcase": 0,
       "new-cap": 0,
       "no-global-assign": 0,
+      "no-warning-comments": 0,
       "capitalized-comments": 0
     },
     "overrides": [
