--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "package:firefox": "plasmo package --target=firefox-mv2"
   },
   "dependencies": {
-    "browser-extension-storage": "^0.0.4",
-    "browser-extension-utils": "^0.0.13",
+    "browser-extension-storage": "^0.0.6",
+    "browser-extension-utils": "^0.0.14",
     "plasmo": "^0.67.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -51,6 +51,7 @@
     "esbuild": "^0.17.14",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
+    "sass": "^1.61.0",
     "typescript": "^4.9.5",
     "xo": "^0.53.1"
   },
