--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dev:userscript": "node scripts/userscript/watch.mjs",
     "dev:bookmarklet": "node scripts/bookmarklet/watch.mjs",
     "dev:module": "node scripts/module/watch.mjs",
+    "staging": "run-p staging:*",
+    "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --loglevel warn --write build/userscript-staging/ && http-server build/userscript-staging/ -o",
     "build": "run-s build:*",
     "build:chrome": "plasmo build",
     "build:firefox": "plasmo build --target=firefox-mv2",
@@ -49,6 +51,7 @@
     "@types/react-dom": "^18.0.11",
     "bookmarkleter": "^1.1.0",
     "esbuild": "^0.17.18",
+    "http-server": "^14.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "sass": "^1.62.0",
