Update the package.json and banner.txt files to publish the extension to the Chrome Web Store and the Edge Store.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "utags",
-  "displayName": "🏷️ UTags - Add usertags to links",
-  "displayName:zh-CN": "🏷️ 小鱼标签 (UTags) - 为链接添加用户标签",
+  "displayName": "UTags - Add usertags to links",
+  "displayName:zh-CN": "小鱼标签 (UTags) - 为链接添加用户标签",
   "version": "0.10.8",
-  "description": "Allow users to add custom tags to links. Works on Greasy Fork, Hacker News, Reddit, GitHub, X(Twitter), Facebook, Threads, Instagram, Youtube, TikTok, pixiv and many sites.",
-  "description:zh-CN": "此插件允许用户为网站的链接添加自定义标签。比如，可以给论坛的用户或帖子添加标签。支持 V2EX, Greasy Fork, GitHub, B站, 抖音, 小红书, 知乎, 掘金, 豆瓣, 吾爱破解, pixiv, LINUX DO, 小众软件, NGA 等网站。",
+  "description": "Add custom tags or notes to links such as users, posts and videos. It works on X, Facebook, Youtube, TikTok, Reddit and many sites.",
+  "description_userscript": "Add custom tags or notes to links such as users, posts and videos. For example, tags can be added to users or posts on a forum, making it easy to identify them or block their posts and replies. It works on X (Twitter), Reddit, Facebook, Threads, Instagram, Youtube, TikTok, GitHub, Greasy Fork, Hacker News, pixiv and numerous other websites.",
+  "description_userscript:zh-CN": "这是个超实用的工具，能给用户、帖子、视频等链接添加自定义标签和备注信息。比如，可以给论坛的用户或帖子添加标签，易于识别他们或屏蔽他们的帖子和回复。支持 V2EX, X, Reddit, Greasy Fork, GitHub, B站, 抖音, 小红书, 知乎, 掘金, 豆瓣, 吾爱破解, pixiv, LINUX DO, 小众软件, NGA 等网站。",
   "author": "Pipecraft",
   "namespace": "https://utags.pipecraft.net/",
   "icon": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23ff6361' class='bi bi-tags-fill' viewBox='0 0 16 16'%3E %3Cpath d='M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z'/%3E %3Cpath d='M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z'/%3E %3C/svg%3E",
@@ -22,16 +23,12 @@
     "dev:chrome": "plasmo dev",
     "dev:firefox": "sleep 2 && plasmo dev --target=firefox-mv2",
     "dev:userscript": "node scripts/userscript/watch.mjs",
-    "dev:bookmarklet": "node scripts/bookmarklet/watch.mjs",
-    "dev:module": "node scripts/module/watch.mjs",
     "staging": "run-p staging:*",
     "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --loglevel warn --write build/userscript-staging/ && http-server build/userscript-staging/ -o",
     "build": "run-s build:*",
-    "build:chrome": "plasmo build",
-    "build:firefox": "plasmo build --target=firefox-mv2",
+    "build:chrome": "plasmo build && node scripts/chrome/update-manifest.mjs",
+    "build:firefox": "plasmo build --target=firefox-mv2 && node scripts/firefox/update-manifest.mjs",
     "build:userscript": "node scripts/userscript/build.mjs && pnpm prettier --loglevel warn --write build/userscript-prod/",
-    "build:bookmarklet": "node scripts/bookmarklet/build.mjs",
-    "build:module": "node scripts/module/build.mjs && pnpm prettier --loglevel warn --write build/module-prod/",
     "package": "run-s package:*",
     "package:chrome": "plasmo package",
     "package:firefox": "plasmo package --target=firefox-mv2"
@@ -61,12 +58,8 @@
     "xo": "^0.56.0"
   },
   "manifest": {
-    "host_permissions": [
-      "https://*/*"
-    ],
     "permissions": [
-      "storage",
-      "tabs"
+      "storage"
     ]
   },
   "xo": {
