feat: apply utags to flarum sites, includes discuss.flarum.org, discuss.flarum.org.cn, www.nodeloc.com, freesmth.net, veryfb.com

--- a/package.json
+++ b/package.json
@@ -80,6 +80,12 @@
         "rules": {
           "@typescript-eslint/naming-convention": 0
         }
+      },
+      {
+        "files": "src/sites/**/*.ts",
+        "rules": {
+          "n/file-extension-in-import": 0
+        }
       }
     ]
   }
