--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "dev:firefox": "sleep 2 && plasmo dev --target=firefox-mv2",
     "dev:userscript": "node scripts/userscript/watch.mjs",
     "staging": "run-p staging:*",
-    "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --loglevel warn --write build/userscript-staging/ && http-server build/userscript-staging/ -o",
+    "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --log-level warn --write build/userscript-staging/ && http-server build/userscript-staging/ -o",
     "build": "run-s build:*",
     "build:chrome": "plasmo build && node scripts/chrome/update-manifest.mjs",
     "build:firefox": "plasmo build --target=firefox-mv2 && node scripts/firefox/update-manifest.mjs",
-    "build:userscript": "node scripts/userscript/build.mjs && pnpm prettier --loglevel warn --write build/userscript-prod/",
+    "build:userscript": "node scripts/userscript/build.mjs && pnpm prettier --log-level warn --write build/userscript-prod/",
     "package": "run-s package:*",
     "package:chrome": "plasmo package",
     "package:firefox": "plasmo package --target=firefox-mv2"
@@ -38,25 +38,25 @@
     "browser-extension-settings": "^0.5.6",
     "browser-extension-storage": "^0.1.2",
     "browser-extension-utils": "^0.1.19",
-    "plasmo": "^0.77.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "plasmo": "^0.90.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "utags-utils": "^0.0.3"
   },
   "devDependencies": {
     "@plasmohq/prettier-plugin-sort-imports": "^3.6.4",
-    "@types/chrome": "^0.0.246",
-    "@types/node": "^20.6.2",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
+    "@types/chrome": "^0.0.309",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "bookmarkleter": "^1.1.0",
-    "esbuild": "^0.19.3",
+    "esbuild": "^0.25.1",
     "http-server": "^14.1.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.5.3",
     "sass": "^1.67.0",
     "typescript": "^5.2.2",
-    "xo": "^0.56.0"
+    "xo": "^0.60.0"
   },
   "manifest": {
     "permissions": [
@@ -75,8 +75,12 @@
     ],
     "rules": {
       "import/extensions": 0,
+      "n/file-extension-in-import": 0,
       "import/order": 0,
       "@typescript-eslint/prefer-nullish-coalescing": 0,
+      "@typescript-eslint/prefer-optional-chain": 0,
+      "logical-assignment-operators": 0,
+      "unicorn/prevent-abbreviations": 0,
       "capitalized-comments": 0
     },
     "overrides": [
@@ -92,6 +96,9 @@
           "n/file-extension-in-import": 0
         }
       }
+    ],
+    "ignores": [
+      "build/**/*"
     ]
   },
   "pnpm": {
