chore: update code styles

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,13 @@ yarn-error.log*
 .env*
 
 out/
-build/
+build/chrome-*/**
+build/firefox-*/**
+build/bookmarklet-*/**
+build/module-*/**
+build/*-dev/**
+*.zip
+*.crx
 dist/
 
 # plasmo - https://www.plasmo.com
