--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --log-level warn --write build/userscript-staging/ && http-server build/userscript-staging/ -o",
     "build": "run-s build:*",
     "build:chrome": "plasmo build && node scripts/chrome/update-manifest.mjs",
-    "build:firefox": "plasmo build --target=firefox-mv2 && node scripts/firefox/update-manifest.mjs",
+    "build:firefox": "plasmo build --target=firefox-mv2 && node scripts/firefox/update-manifest.mjs && addons-linter build/firefox-mv2-prod/",
     "build:userscript": "node scripts/userscript/build.mjs && pnpm prettier --log-level warn --write build/userscript-prod/",
     "package": "run-s package:*",
     "package:chrome": "plasmo package",
-    "package:firefox": "plasmo package --target=firefox-mv2"
+    "package:firefox": "plasmo package --target=firefox-mv2 && addons-linter build/firefox-mv2-prod.zip"
   },
   "dependencies": {
     "browser-extension-i18n": "^0.0.6",
@@ -49,6 +49,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "addons-linter": "^7.8.0",
     "bookmarkleter": "^1.1.0",
     "esbuild": "^0.25.1",
     "http-server": "^14.1.1",
