feat: Add language switching functionality, Support for more languagesi (#76)

--- a/package.json
+++ b/package.json
@@ -2,12 +2,32 @@
   "name": "utags",
   "displayName": "UTags - Add usertags to links",
   "displayName:zh-CN": "小鱼标签 (UTags) - 为链接添加用户标签",
+  "displayName:zh-HK": "小魚標籤 (UTags) - 為連結添加用戶標籤",
+  "displayName:zh-TW": "小魚標籤 (UTags) - 為連結新增使用者標籤",
+  "displayName:ja": "小魚タグ (UTags) - リンクにユーザータグを追加",
+  "displayName:ko": "UTags - 링크에 사용자 태그 추가",
+  "displayName:de": "UTags - Benutzer-Tags zu Links hinzufügen",
+  "displayName:fr": "UTags - Ajouter des tags utilisateur aux liens",
+  "displayName:es": "UTags - Agregar etiquetas de usuario a los enlaces",
+  "displayName:it": "UTags - Aggiungi tag utente ai collegamenti",
+  "displayName:pt": "UTags - Adicionar tags de usuário aos links",
+  "displayName:vi": "UTags - Thêm tag người dùng vào liên kết",
   "displayName:ru": "UTags - Добавление пользовательских тегов к ссылкам",
   "version": "0.19.4",
   "description": "Add custom tags or notes to links such as users, posts and videos. It works on X, Facebook, Youtube, TikTok, Reddit and many sites.",
-  "description_userscript": "Add custom tags or notes to links such as users, posts and videos. For example, tags can be added to users or posts on a forum, making it easy to identify them or block their posts and replies. It works on X (Twitter), Reddit, Facebook, Threads, Instagram, Youtube, TikTok, GitHub, Greasy Fork, Hacker News, pixiv and numerous other websites.",
-  "description_userscript:zh-CN": "这是个超实用的工具，能给用户、帖子、视频等链接添加自定义标签和备注信息。比如，可以给论坛的用户或帖子添加标签，易于识别他们或屏蔽他们的帖子和回复。支持 V2EX, X, Reddit, Greasy Fork, GitHub, B站, 抖音, 小红书, 知乎, 掘金, 豆瓣, 吾爱破解, pixiv, LINUX DO, 小众软件, NGA, BOSS直聘等网站。",
-  "description_userscript:ru": "Это очень полезный инструмент для добавления пользовательских тегов и заметок к ссылкам пользователей, публикаций и видео. Например, можно добавлять теги к пользователям или публикациям на форуме, что облегчает их идентификацию или блокировку их сообщений и ответов. Поддерживает V2EX, X, Reddit, Greasy Fork, GitHub, Bilibili, Douyin, Xiaohongshu, Zhihu, Juejin, Douban, 52pojie, pixiv, LINUX DO, APPINN, NGA, BOSS Zhipin и многие другие сайты.",
+  "description_userscript": "Enhance your browsing experience by adding custom tags and notes to users, posts, and videos across the web. Perfect for organizing content, identifying users, and filtering out unwanted posts. Supports 100+ popular websites including X (Twitter), Reddit, Facebook, Threads, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch, and many more.",
+  "description_userscript:zh-CN": "为网页上的用户、帖子、视频添加自定义标签和备注，让你的浏览体验更加个性化和高效。轻松识别用户、整理内容、过滤无关信息。支持 100+ 热门网站，包括 V2EX、X (Twitter)、YouTube、TikTok、Reddit、GitHub、B站、抖音、小红书、知乎、掘金、豆瓣、吾爱破解、pixiv、LINUX DO、小众软件、NGA、BOSS直聘等。",
+  "description_userscript:zh-HK": "為網頁上的用戶、帖子、視頻添加自定義標籤和備註，讓你的瀏覽體驗更加個性化和高效。輕鬆識別用戶、整理內容、過濾無關信息。支持 100+ 熱門網站，包括 X (Twitter)、Reddit、Facebook、Instagram、YouTube、TikTok、GitHub、Hacker News、Greasy Fork、pixiv、Twitch 等。",
+  "description_userscript:zh-TW": "為網頁上的使用者、貼文、影片新增自訂標籤和備註，讓你的瀏覽體驗更加個人化和高效。輕鬆識別使用者、整理內容、過濾無關資訊。支援 100+ 熱門網站，包括 X (Twitter)、Reddit、Facebook、Instagram、YouTube、TikTok、GitHub、Hacker News、Greasy Fork、pixiv、Twitch 等。",
+  "description_userscript:ja": "ウェブ上のユーザー、投稿、動画にカスタムタグやメモを追加して、ブラウジング体験を向上させましょう。コンテンツの整理、ユーザーの識別、不要な投稿のフィルタリングに最適です。X (Twitter)、Reddit、Facebook、Instagram、YouTube、TikTok、GitHub、Hacker News、Greasy Fork、pixiv、Twitch など 100+ の人気サイトをサポートしています。",
+  "description_userscript:ko": "웹상의 사용자, 게시물, 동영상에 사용자 정의 태그와 메모를 추가하여 브라우징 경험을 향상시키세요. 콘텐츠 정리, 사용자 식별, 원하지 않는 게시물 필터링에 완벽합니다. X (Twitter), Reddit, Facebook, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch 등 100개 이상의 인기 웹사이트를 지원합니다.",
+  "description_userscript:de": "Verbessern Sie Ihr Browsing-Erlebnis, indem Sie benutzerdefinierte Tags und Notizen zu Benutzern, Beiträgen und Videos im Web hinzufügen. Perfekt zum Organisieren von Inhalten, Identifizieren von Benutzern und Filtern unerwünschter Beiträge. Unterstützt über 100 beliebte Websites, darunter X (Twitter), Reddit, Facebook, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch und viele mehr.",
+  "description_userscript:fr": "Améliorez votre expérience de navigation en ajoutant des tags personnalisés et des notes aux utilisateurs, publications et vidéos sur le web. Parfait pour organiser le contenu, identifier les utilisateurs et filtrer les publications indésirables. Prend en charge plus de 100 sites web populaires, notamment X (Twitter), Reddit, Facebook, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch et bien d'autres.",
+  "description_userscript:es": "Mejora tu experiencia de navegación agregando etiquetas personalizadas y notas a usuarios, publicaciones y videos en la web. Perfecto para organizar contenido, identificar usuarios y filtrar publicaciones no deseadas. Compatible con más de 100 sitios web populares, incluyendo X (Twitter), Reddit, Facebook, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch y muchos más.",
+  "description_userscript:it": "Migliora la tua esperienza di navigazione aggiungendo tag personalizzati e note a utenti, post e video sul web. Perfetto per organizzare contenuti, identificare utenti e filtrare post indesiderati. Supporta oltre 100 siti web popolari, tra cui X (Twitter), Reddit, Facebook, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch e molti altri.",
+  "description_userscript:pt": "Melhore sua experiência de navegação adicionando tags personalizadas e notas a usuários, posts e vídeos na web. Perfeito para organizar conteúdo, identificar usuários e filtrar posts indesejados. Suporta mais de 100 sites populares, incluindo X (Twitter), Reddit, Facebook, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch e muitos outros.",
+  "description_userscript:vi": "Nâng cao trải nghiệm duyệt web của bạn bằng cách thêm thẻ tùy chỉnh và ghi chú cho người dùng, bài đăng và video trên web. Hoàn hảo để tổ chức nội dung, nhận dạng người dùng và lọc các bài đăng không mong muốn. Hỗ trợ hơn 100 trang web phổ biến bao gồm X (Twitter), Reddit, Facebook, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch và nhiều trang khác.",
+  "description_userscript:ru": "Улучшите свой опыт просмотра веб-страниц, добавляя пользовательские теги и заметки к пользователям, публикациям и видео. Идеально подходит для организации контента, идентификации пользователей и фильтрации нежелательных постов. Поддерживает 100+ популярных сайтов, включая X (Twitter), Reddit, Facebook, Threads, Instagram, YouTube, TikTok, GitHub, Hacker News, Greasy Fork, pixiv, Twitch и многие другие.",
   "author": "Pipecraft",
   "namespace": "https://utags.pipecraft.net/",
   "icon": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23ff6361' class='bi bi-tags-fill' viewBox='0 0 16 16'%3E %3Cpath d='M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z'/%3E %3Cpath d='M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z'/%3E %3C/svg%3E",
@@ -39,8 +59,8 @@
     "test:ui": "vitest --ui --coverage.enabled=true"
   },
   "dependencies": {
-    "browser-extension-i18n": "^0.0.6",
-    "browser-extension-settings": "^0.5.6",
+    "browser-extension-i18n": "^0.1.3",
+    "browser-extension-settings": "^0.6.3",
     "browser-extension-storage": "^0.1.2",
     "browser-extension-utils": "^0.2.0",
     "plasmo": "^0.90.5",
