feat: add release workflow

--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "staging": "run-p staging:*",
     "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --log-level warn --write build/userscript-staging/ && http-server build/userscript-staging/ -o",
     "build": "run-s build:*",
-    "build:chrome": "plasmo build && node scripts/chrome/update-manifest.mjs",
-    "build:firefox": "plasmo build --target=firefox-mv2 && node scripts/firefox/update-manifest.mjs && addons-linter build/firefox-mv2-prod/",
+    "build:chrome": "cross-env PARCEL_WORKER_BACKEND=process plasmo build && node scripts/chrome/update-manifest.mjs",
+    "build:firefox": "cross-env PARCEL_WORKER_BACKEND=process plasmo build --target=firefox-mv2 && node scripts/firefox/update-manifest.mjs && addons-linter build/firefox-mv2-prod/",
     "build:userscript": "node scripts/userscript/build.mjs && pnpm prettier --log-level warn --write build/userscript-prod/",
     "package": "run-s package:*",
     "package:chrome": "plasmo package",
@@ -78,6 +78,7 @@
     "@vitest/ui": "^3.2.4",
     "addons-linter": "^7.19.0",
     "bookmarkleter": "^1.1.0",
+    "cross-env": "^10.0.0",
     "esbuild": "^0.25.9",
     "http-server": "^14.1.1",
     "jsdom": "^26.1.0",
