feat: Add quick tag menu commands for faster tag management (#72)

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "dev:firefox": "sleep 2 && plasmo dev --target=firefox-mv2",
     "dev:userscript": "node scripts/userscript/watch.mjs",
     "staging": "run-p staging:*",
-    "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --log-level warn --write build/userscript-staging/ && http-server build/userscript-staging/ -o",
+    "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --log-level warn --write build/userscript-staging/ && http-server build/userscript-staging/",
     "build": "run-s build:*",
     "build:chrome": "cross-env PARCEL_WORKER_BACKEND=process plasmo build && node scripts/chrome/update-manifest.mjs",
     "build:firefox": "cross-env PARCEL_WORKER_BACKEND=process plasmo build --target=firefox-mv2 && node scripts/firefox/update-manifest.mjs && addons-linter build/firefox-mv2-prod/",
@@ -62,7 +62,7 @@
     "browser-extension-i18n": "^0.1.3",
     "browser-extension-settings": "^0.6.4",
     "browser-extension-storage": "^0.1.2",
-    "browser-extension-utils": "^0.2.0",
+    "browser-extension-utils": "^0.2.2",
     "plasmo": "^0.90.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
