refactor(monorepo): update package.json

--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -1,24 +1,25 @@
 {
   "name": "utags-app",
-  "version": "0.19.9-25082502",
+  "version": "0.19.13",
   "author": "Pipecraft",
   "namespace": "https://utags.pipecraft.net/",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/utags/utags-bookmarks/issues"
+    "url": "https://github.com/utags/utags/issues"
   },
-  "homepage": "https://github.com/utags/utags-bookmarks#readme",
+  "homepage": "https://github.com/utags/utags#readme",
   "type": "module",
   "scripts": {
-    "p": "prettier --write . && npx prettier@2.8.8 --config .prettierrc-markdown.cjs --write *.md",
     "lint": "run-s lint:*",
-    "lint:code": "npm run p && xo --fix",
+    "lint:format": "pnpm -w run format",
+    "lint:code": "xo --fix",
     "lint:type": "tsc --noemit",
     "lint:check": "svelte-check --tsconfig ./tsconfig.json",
     "dev": "vite",
     "dev:proxy": "tsx watch mock-server/webdav-proxy.ts",
     "build": "vite build",
     "preview": "vite preview",
+    "package": "cd dist && zip -r ../utags-webapp.zip . && cd ..",
     "test": "vitest --run",
     "test:watch": "vitest watch",
     "coverage": "vitest run --coverage",
@@ -37,10 +38,6 @@
     "@tailwindcss/vite": "^4.1.11",
     "@testing-library/svelte": "^5.2.8",
     "@types/express": "^5.0.3",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^24.0.8",
-    "@vitest/coverage-v8": "^3.2.3",
-    "@vitest/ui": "^3.2.3",
     "autoprefixer": "^10.4.21",
     "browser-extension-utils": "^0.2.0",
     "console-tagger": "^0.0.6",
@@ -52,12 +49,8 @@
     "lucide-svelte": "^0.525.0",
     "msw": "^2.10.2",
     "node-fetch": "^3.3.2",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "postcss-load-config": "^6.0.1",
-    "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.6.12",
     "svelte": "^5.34.9",
     "svelte-check": "^4.2.1",
     "svelte-persisted-store": "^0.12.0",
@@ -65,12 +58,10 @@
     "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
-    "typescript": "^5.8.3",
     "utags-utils": "^0.3.2",
     "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.1",
-    "vitest": "^3.2.4",
-    "xo": "^0.60.0"
+    "vitest": "^3.2.4"
   },
   "xo": {
     "space": 2,
