refactor(monorepo): update workflow

--- a/.github/workflows/ci-webapp.yml
+++ b/.github/workflows/ci-webapp.yml
@@ -20,31 +20,40 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          cache: "pnpm"
+          cache-dependency-path: "pnpm-lock.yaml"
 
-      - run: npm install
+      - run: pnpm install --filter ./packages/webapp
 
-      - run: npm run compile-paraglide
+      - name: Compile Paraglide
+        run: pnpm run --filter ./packages/webapp compile-paraglide
 
-      - run: npm run test
+      - name: Run tests
+        run: pnpm run --filter ./packages/webapp test
 
-      - run: npm run build
+      - name: Build webapp
+        run: pnpm run --filter ./packages/webapp build
 
       - name: Copy 404.html
-        run: cp dist/index.html dist/404.html
+        run: cp ./packages/webapp/dist/index.html ./packages/webapp/dist/404.html
 
       - name: Create CNAME file
         if: "${{ vars.CNAME != '' }}"
-        run: echo "${{ vars.CNAME }}" > dist/CNAME
+        run: echo "${{ vars.CNAME }}" > ./packages/webapp/dist/CNAME
 
       - name: Deploy to GitHub Pages
         if: github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./packages/webapp/dist
           force_orphan: true
