refactor(monorepo): bulk rename utags/utags-bookmarks to utags/utags

--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "vitest": "^3.2.4",
     "xo": "^0.60.0"
   },
+  "xo": {
+    "space": 2,
+    "prettier": true
+  },
   "pnpm": {
     "ignoredBuiltDependencies": [
       "@parcel/watcher",
