--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "utags-app",
-  "version": "0.19.13",
+  "version": "0.19.13-2025083101",
   "author": "Pipecraft",
   "namespace": "https://utags.pipecraft.net/",
   "license": "MIT",
@@ -51,7 +51,7 @@
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
     "postcss-load-config": "^6.0.1",
-    "svelte": "^5.34.9",
+    "svelte": "5.35.7",
     "svelte-check": "^4.2.1",
     "svelte-persisted-store": "^0.12.0",
     "svelte-virtual-list": "^3.0.1",
