--- a/.github/workflows/ci-webapp.yml
+++ b/.github/workflows/ci-webapp.yml
@@ -56,4 +56,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./packages/webapp/dist
-          force_orphan: true
+          keep_files: true
+          # Set to true when https://github.com/peaceiris/actions-gh-pages/issues/455 is resolved
+          force_orphan: false
