--- a/packages/docusaurus/package.json
+++ b/packages/docusaurus/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "format": "pnpm -w run format",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
