--- a/packages/docusaurus/blog/authors.yml
+++ b/packages/docusaurus/blog/authors.yml
@@ -1,25 +1,35 @@
-yangshun:
-  name: Yangshun Tay
-  title: Ex-Meta Staff Engineer, Co-founder GreatFrontEnd
+pipecraft:
+  name: Pipecraft
+  title: UTags Author
   url: https://linkedin.com/in/yangshun
-  image_url: https://github.com/yangshun.png
+  image_url: https://github.com/PipecraftNet.png
   page: true
   socials:
-    x: yangshunz
-    linkedin: yangshun
-    github: yangshun
-    newsletter: https://www.greatfrontend.com
+    github: PipecraftNet
+    home: https://pipecraft.net
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
-  page:
-    # customize the url of the author page at /blog/authors/<permalink>
-    permalink: "/all-sebastien-lorber-articles"
-  socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+# yangshun:
+#   name: Yangshun Tay
+#   title: Ex-Meta Staff Engineer, Co-founder GreatFrontEnd
+#   url: https://linkedin.com/in/yangshun
+#   image_url: https://github.com/yangshun.png
+#   page: true
+#   socials:
+#     x: yangshunz
+#     linkedin: yangshun
+#     github: yangshun
+#     newsletter: https://www.greatfrontend.com
+
+# slorber:
+#   name: Sébastien Lorber
+#   title: Docusaurus maintainer
+#   url: https://sebastienlorber.com
+#   image_url: https://github.com/slorber.png
+#   page:
+#     # customize the url of the author page at /blog/authors/<permalink>
+#     permalink: "/all-sebastien-lorber-articles"
+#   socials:
+#     x: sebastienlorber
+#     linkedin: sebastienlorber
+#     github: slorber
+#     newsletter: https://thisweekinreact.com
