--- a/packages/docusaurus/package.json
+++ b/packages/docusaurus/package.json
@@ -65,6 +65,12 @@
         "rules": {
           "unicorn/filename-case": 0
         }
+      },
+      {
+        "files": "docusaurus.config.ts",
+        "rules": {
+          "@typescript-eslint/naming-convention": 0
+        }
       }
     ]
   }
