fix(sync): Firefox HTTP Proxy issue (#122)

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -81,7 +81,12 @@
   },
   "manifest": {
     "permissions": [
-      "storage"
+      "storage",
+      "<all_urls>"
+    ],
+    "host_permissions": [
+      "https://*/*",
+      "http://*/*"
     ]
   },
   "xo": {
