--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -46,7 +46,7 @@
     "dev:firefox": "sleep 2 && plasmo dev --target=firefox-mv2",
     "dev:userscript": "node scripts/userscript/watch.mjs",
     "staging": "run-p staging:*",
-    "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --log-level warn --write build/userscript-staging/ && http-server build/userscript-staging/ -o",
+    "staging:userscript": "node scripts/userscript/build.mjs --staging && pnpm prettier --log-level warn --write build/userscript-staging/",
     "build": "run-s build:*",
     "build:chrome": "cross-env PARCEL_WORKER_BACKEND=process plasmo build && node scripts/chrome/update-manifest.mjs",
     "build:firefox": "cross-env PARCEL_WORKER_BACKEND=process plasmo build --target=firefox-mv2 && node scripts/firefox/update-manifest.mjs && addons-linter build/firefox-mv2-prod/",
